<resources>
    <string name="app_name">LFilePickDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_path">Start from: </string>
    <string name="file_type">File type: </string>
    <string name="is_choose_file">Is Chose file</string>
    <string name="is_multi_mode">Is multi Mode</string>
    <string name="is_greater_than_standard">Is greater than standard</string>
    <string name="standard_file_size">Standard file size: </string>
    <string name="max_select_file_num">Max selected file num: </string>
</resources>
